# obd_serial

./: .gitignore  build.gradle  settings.gradle  串口SDK使用说明.docx
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/miyuan/obd/: FileLoggingTree.java  Log.java  MainActivity.java  PanelActivity.java  PermissionUtil.java
app/src/main/res/layout/: activity_main.xml  panel_board.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
serial/: CMakeLists.txt  build.gradle
serial/src/main/: AndroidManifest.xml
serial/src/main/cpp/: CMakeLists.txt  OBDBusiness.cpp
serial/src/main/cpp/include/: sqlite3.h
serial/src/main/cpp/openssl/: asn1.h  asn1t.h  bio.h  bn.h  buffer.h  camellia.h  cms.h  comp.h  conf.h  crypto.h  dh.h  dsa.h  e_os2.h  ebcdic.h  ec.h  engine.h  evp.h  lhash.h  modes.h  objects.h  pem.h  pkcs12.h  rsa.h  seed.h  ssl.h  stack.h  tls1.h  ts.h  ui.h  whrlpool.h  x509.h  x509_vfy.h  x509v3.h
serial/src/main/java/com/miyuan/obd/serial/: DynamicDataType.java  FaultCode.java  FixedDataType.java  OBDBusiness.java  OBDCore.java  PanelBoardInfo.java
